--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/parser": "^5.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-define-config": "^2.1.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
