chore(vscode): comment out prettier-eslint settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,13 @@
   "editor.indentSize": "tabSize",
   "editor.detectIndentation": true,
   "editor.tabSize": 2,
-  "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+  // "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
   "editor.formatOnType": false,
   "editor.formatOnSave": true,
   "files.autoSave": "onFocusChange",
   "editor.formatOnPaste": true,
   "editor.formatOnSaveMode": "file",
-  "vs-code-prettier-eslint.prettierLast": false,
+  // "vs-code-prettier-eslint.prettierLast": false,
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
   },
